{
  "version": 4,
  "terraform_version": "1.5.0",
  "serial": 50,
  "lineage": "8314b958-5065-dc51-cb34-657e15dc241a",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cd241fb082f913c8",
            "domain": "vpc",
            "id": "eipalloc-0cd241fb082f913c8",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-44-224-187-2.us-west-2.compute.amazonaws.com",
            "public_ip": "44.224.187.2",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev-nat0"
            },
            "tags_all": {
              "Name": "dev-nat0"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0be0e9b25a3f70941",
            "domain": "vpc",
            "id": "eipalloc-0be0e9b25a3f70941",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-44-241-112-41.us-west-2.compute.amazonaws.com",
            "public_ip": "44.241.112.41",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev-nat1"
            },
            "tags_all": {
              "Name": "dev-nat1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:553154904701:internet-gateway/igw-08dc7e81cca5d9630",
            "id": "igw-08dc7e81cca5d9630",
            "owner_id": "553154904701",
            "tags": {
              "Name": "dev-main"
            },
            "tags_all": {
              "Name": "dev-main"
            },
            "vpc_id": "vpc-04614699e511f18ae"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cd241fb082f913c8",
            "association_id": "eipassoc-0b28be516fad7bd66",
            "connectivity_type": "public",
            "id": "nat-04767e1de111cef4d",
            "network_interface_id": "eni-0261a6ddea8ca4d5e",
            "private_ip": "10.0.0.13",
            "public_ip": "44.224.187.2",
            "subnet_id": "subnet-0c4089881200dbf0e",
            "tags": {
              "name": "dev-main0"
            },
            "tags_all": {
              "name": "dev-main0"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0be0e9b25a3f70941",
            "association_id": "eipassoc-0bbfb9c4c04ddff24",
            "connectivity_type": "public",
            "id": "nat-0298f3c7bea1f3ff9",
            "network_interface_id": "eni-03f101342721f7f42",
            "private_ip": "10.0.1.181",
            "public_ip": "44.241.112.41",
            "subnet_id": "subnet-064799932840bb023",
            "tags": {
              "name": "dev-main1"
            },
            "tags_all": {
              "name": "dev-main1"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:553154904701:route-table/rtb-0ceb24a34a2ae63d3",
            "id": "rtb-0ceb24a34a2ae63d3",
            "owner_id": "553154904701",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08dc7e81cca5d9630",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-public"
            },
            "tags_all": {
              "Name": "dev-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-04614699e511f18ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd4c4d43e18221c7",
            "route_table_id": "rtb-0ceb24a34a2ae63d3",
            "subnet_id": "subnet-0c4089881200dbf0e"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0650a2b2f14841806",
            "route_table_id": "rtb-0ceb24a34a2ae63d3",
            "subnet_id": "subnet-064799932840bb023"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:553154904701:subnet/subnet-05cf03a7b6b140f77",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05cf03a7b6b140f77",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "553154904701",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-private0"
            },
            "tags_all": {
              "Name": "dev-private0"
            },
            "vpc_id": "vpc-04614699e511f18ae"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:553154904701:subnet/subnet-09a1796b35d766f79",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09a1796b35d766f79",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "553154904701",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-private1"
            },
            "tags_all": {
              "Name": "dev-private1"
            },
            "vpc_id": "vpc-04614699e511f18ae"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:553154904701:subnet/subnet-0c4089881200dbf0e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c4089881200dbf0e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "553154904701",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-public0"
            },
            "tags_all": {
              "Name": "dev-public0"
            },
            "vpc_id": "vpc-04614699e511f18ae"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:553154904701:subnet/subnet-064799932840bb023",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-064799932840bb023",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "553154904701",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-public1"
            },
            "tags_all": {
              "Name": "dev-public1"
            },
            "vpc_id": "vpc-04614699e511f18ae"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:553154904701:vpc/vpc-04614699e511f18ae",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-005ee1d920beb5e56",
            "default_route_table_id": "rtb-05b7a607cf460d002",
            "default_security_group_id": "sg-0cf5eb4331a7f9f41",
            "dhcp_options_id": "dopt-0bc3c3d25eedeebbd",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04614699e511f18ae",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05b7a607cf460d002",
            "owner_id": "553154904701",
            "tags": {
              "Name": "dev-main"
            },
            "tags_all": {
              "Name": "dev-main"
            }
          }
        }
      ]
    }
  ]
}